--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ lem-in
 
 # Linker output
 *.ilk
-*.map
 *.exp
 
 # Precompiled Headers
@@ -53,3 +52,5 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+lem-in
