--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,12 @@
 {
   "cmake.configureOnOpen": true,
   "files.associations": {
-    "*.c": "c",
-    "*.h": "c",
-    "*.cpp": "cpp",
-    "*.hpp": "cpp",
-    "*.mdx": "markdown",
-    "__locale": "c"
-  }
+	"*.c": "c",
+	"*.h": "c",
+	"*.cpp": "cpp",
+	"*.hpp": "cpp",
+	"*.mdx": "markdown",
+	"__locale": "c",
+	"ranges": "c"
+}
 }
