--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,15 @@
 {
-  "cmake.configureOnOpen": true,
-  "files.associations": {
-	"*.c": "c",
-	"*.h": "c",
-	"*.cpp": "cpp",
-	"*.hpp": "cpp",
-	"*.mdx": "markdown",
-	"__locale": "c",
-	"ranges": "c"
-}
+	"files.associations": {
+		"*.c": "c",
+		"*.h": "c",
+		"*.cpp": "cpp",
+		"*.hpp": "cpp",
+		"*.mdx": "markdown",
+		"vector": "c",
+		"array": "c",
+		"concepts": "c",
+		"optional": "c",
+		"tuple": "c",
+		"type_traits": "c"
+	}
 }
